Added transaction count

--- a/Other.html
+++ b/Other.html
@@ -119,5 +119,12 @@
             </table>
         </div>
         <br/>
+        <div class="ui statistic" id='transac' style="display: none;left: 60px;position: relative;">
+            <div class="value">
+            </div>
+            <div class="label">
+                Transactions
+            </div>
+        </div>
     </body>
 </html>
