--- a/Other.html
+++ b/Other.html
@@ -12,6 +12,15 @@
         <script src="Other.js"></script>
     </head>
     <body>
+        <div class="ui dimmer" id="welcome">
+            <div class="content">
+                <div class="center">
+                    <h2 class="ui inverted header">
+                        Welcome Chris
+                    </h2>
+                </div>
+            </div>
+        </div>
         <div class="ui" id='load'>
           <div class="ui page dimmer">
             <div class="ui text loader">Reading CSV</div>
