--- a/login.html
+++ b/login.html
@@ -3,13 +3,8 @@
     <head>
         <link rel="stylesheet" type="text/css" href="Semantic/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="Other.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.0.9/jquery.mCustomScrollbar.min.css" type="text/css">
         <script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
-        <script src='papaparse.min.js'></script>
-        <script type="text/javascript" charset="utf-8" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
         <script src="Semantic/semantic.min.js"></script>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.0.9/jquery.mCustomScrollbar.min.js'></script>
-        <script src="Other.js"></script>
     </head>
     <style media="screen">
         #login-box {
@@ -44,4 +39,35 @@
                 </form>
             </div>
     </body>
+    <script type="text/javascript">
+    $('.ui.form')
+        .form({
+        fields: {
+            username: {
+                identifier  : 'username',
+                rules: [
+                {
+                    type   : 'empty',
+                    prompt : 'Please enter your username'
+                }
+                ]
+            },
+            password: {
+                identifier : 'password',
+                rules: [
+                {
+                    type   : 'empty',
+                    prompt : 'Please enter a password'
+                }
+                ]
+            },
+        },
+        inline: true
+    });
+    function check(form) {
+        if(form.username.value == "Chris" && form.password.value == "Jedaii2017") {
+            window.location.href = "Other.html";
+        }
+    }
+    </script>
 </html>
