Added two new sectors

--- a/Other.html
+++ b/Other.html
@@ -54,6 +54,8 @@
                         <option value="Music">Music</option>
                         <option value="Movies">Movies</option>
                         <option value="Tuition">Tuition</option>
+                        <option value="Withdrawal">Withdrawal</option>
+                        <option value="Transfer">Transfer</option>
                     </select>
                     <i class="dropdown icon"></i>
                     <div class="default text">Select Type</div>
@@ -67,6 +69,8 @@
                         <div class="item" data-value="Music">Music</div>
                         <div class="item" data-value="Movies">Movies</div>
                         <div class="item" data-value="Tuition">Tuition</div>
+                        <div class="item" data-value="Withdrawal">Withdrawal</div>
+                        <div class="item" data-value="Transfer">Transfer</div>
                     </div>
                 </div>
                 <div>
