Added new sector

--- a/Other.html
+++ b/Other.html
@@ -53,6 +53,7 @@
                         <option value="Books">Books</option>
                         <option value="Music">Music</option>
                         <option value="Movies">Movies</option>
+                        <option value="Clothing">Clothing</option>
                         <option value="Tuition">Tuition</option>
                         <option value="Withdrawal">Withdrawal</option>
                         <option value="Transfer">Transfer</option>
@@ -68,6 +69,7 @@
                         <div class="item" data-value="Books">Books</div>
                         <div class="item" data-value="Music">Music</div>
                         <div class="item" data-value="Movies">Movies</div>
+                        <div class="item" data-value="Clothing">Clothing</div>
                         <div class="item" data-value="Tuition">Tuition</div>
                         <div class="item" data-value="Withdrawal">Withdrawal</div>
                         <div class="item" data-value="Transfer">Transfer</div>
@@ -115,6 +117,13 @@
                     </div>
                     <div class="label">
                         Total Spent
+                    </div>
+                </div>
+                <div class="statistic" id='deposit'>
+                    <div class="value">
+                    </div>
+                    <div class="label">
+                        Deposited
                     </div>
                 </div>
             </div>
