--- a/cal.html
+++ b/cal.html
@@ -26,6 +26,7 @@
 
                     //get from/to date
                     var obj = checkFromToString(data, i);
+                    var desc = data["items"][i]["summary"];
 
                     if(data["items"][i].hasOwnProperty("recurrence") != false){
                         var recurrString = "Till: " + convertRecurrenceString(data["items"][i]["recurrence"][0]);
@@ -33,7 +34,7 @@
                         var recurrString = "";
                     }
 
-                    $('body').append(data["items"][i]["summary"] + ": " + obj.from + " to " + obj.to + "<br/>");// + recurrString + "<br/>");
+                    $('body').append("<div>" + desc + ": " + obj.from + " to " + obj.to + "</div>");// + recurrString + "<br/>");
                 }
             }
             function convertRecurrenceString(str) {
@@ -63,7 +64,7 @@
             }
             function getMonthString(str) {
                 var mth;
-                
+
                 if(str == 0){mth = "01";}
                 if(str == 1){mth = "02";}
                 if(str == 2){mth = "03";}
@@ -82,7 +83,7 @@
             function getURL() {
                 var d = new Date();
                 d = d.getUTCFullYear() + "-" + getMonthString(d.getMonth()) + "-" + d.getDate();
-                var url = "https://www.googleapis.com/calendar/v3/calendars/chrissantosproduction%40gmail.com/events?timeMax=2015-12-31T00%3A00%3A00-04%3A00&timeMin=" + d + "T18%3A00%3A00-04%3A00&key=AIzaSyBsVUi9O3Js5biGFG746qYYWhY96wt9AaM";
+                var url = "https://www.googleapis.com/calendar/v3/calendars/chrissantosproduction%40gmail.com/events?maxResults=10&orderBy=startTime&singleEvents=true&timeMax=2015-12-31T00%3A00%3A00-04%3A00&timeMin=" + d + "T18%3A00%3A00-04%3A00&key=AIzaSyBsVUi9O3Js5biGFG746qYYWhY96wt9AaM";
                 return url;
             }
         </script>
