--- a/cal.html
+++ b/cal.html
@@ -30,7 +30,7 @@
                     success: function(data2) {
                         for(var i = 0; i <= 10; i++){
                             colors[i] = data2["event"][(i+1).toString()]["background"];
-                            $('body').append("<div style='width: 100px;height:100px;background: "+ colors[i] + ";'</div>")
+                            //$('body').append("<div style='width: 100px;height:100px;background: "+ colors[i] + ";'</div>")
                         }
                         console.log(colors);
                     }
@@ -43,6 +43,11 @@
                     //get from/to date
                     var obj = checkFromToString(data, i);
                     var desc = data["items"][i]["summary"];
+                    var location = data["items"][i]["location"]
+
+                    if(location == null || location == "") {
+                        location = "No Location";
+                    }
 
                     if(data["items"][i].hasOwnProperty("recurrence") != false){
                         var recurrString = "Till: " + convertRecurrenceString(data["items"][i]["recurrence"][0]);
@@ -50,10 +55,10 @@
                         var recurrString = "";
                     }
 
-                    $('.ui.cards').append("<div class='card' style='background'>" +
+                    $('.ui.cards').append("<div class='red card' style='background'>" +
                                               "<div class='content'>" +
                                                   "<div class='header'>" + desc + ": </div>" +
-                                                  "<div class='meta'>Location: </div>" +
+                                                  "<div class='meta'>Location: " + location + "</div>" +
                                                   "<div class='description'>" + obj.from + " to " + obj.to + "</div>" +
                                               "</div>" +
                                           "</div>");
@@ -108,15 +113,16 @@
             function getURL(sel) {
                 if(sel == 1) {
                     var d = new Date();
-                    d = d.getUTCFullYear() + "-" + getMonthString(d.getMonth()) + "-" + d.getDate();
-                    // var url = "https://www.google.com/calendar/feeds/chrissantosproduction%40gmail.com/private-ef13589253dc3392f7a5f6722e73671f/basic";
+                    var e = new Date();
+                    d = moment(d).format("YYYY-MM-DD");
+                    e = moment(e).add('days', 5).format("YYYY-MM-DD");
 
                     var url = "https://www.googleapis.com/calendar/v3/calendars/chrissantosproduction%40gmail.com/events?" +
                                    "maxResults=10&"+
                                    "orderBy=startTime&"+
                                    "singleEvents=true&"+
-                                   "timeMax=2015-12-31T00%3A00%3A00-04%3A00&"+
-                                   "timeMin=2015-08-13T18%3A00%3A00-04%3A00&"+
+                                   "timeMax=" + e + "T00%3A00%3A00-04%3A00&"+
+                                   "timeMin=" + d + "T18%3A00%3A00-04%3A00&"+
                                    "fields=items(colorId%2Cend%2Clocation%2Cstart%2Csummary)&"+
                                    "key=AIzaSyBsVUi9O3Js5biGFG746qYYWhY96wt9AaM";
                 }
