Added two new pages

--- a/home.html
+++ b/home.html
@@ -17,6 +17,12 @@
             <div class='two wide column'>
                 <button class='ui labeled icon button' onclick="window.location.href='cal.html';"><i class='calendar icon'></i>Calendar</button>
             </div>
+            <div class='two wide column'>
+                <button class='ui labeled icon button' onclick="window.location.href='maps.html';"><i class='marker icon'></i>Maps</button>
+            </div>
+            <div class='two wide column'>
+                <button class='ui labeled icon button' onclick="window.location.href='Stock.html';"><i class='line chart icon'></i>Stocks</button>
+            </div>
         </div>
     </body>
 </html>
