Updated id for download function

--- a/stock.html
+++ b/stock.html
@@ -20,7 +20,7 @@
                 <button id='stop' class="ui labeled icon button"><i class="stop icon"></i>Stop</button>
                 <button class="ui labeled icon button" onclick='downloadCSV({ filename: "stock-data.csv" });'><i class='download icon'></i>Download CSV</button>
             </div>
-            <div class='ui statistics' style="display: none;">
+            <div class='ui statistics' id='statistics' style="display: none;">
                 <div class='statistic' id='price'>
                     <div class="value"></div>
                     <div class="label">Symbol</div>
