--- a/cal.html
+++ b/cal.html
@@ -99,7 +99,7 @@
 
                     var d = new Date();
                     d = moment(d);
-                    d = d.add('days', j).format("MMM Do");
+                    d = d.add('days', j).format("MM/DD");
                     var day = classes[j];
                     $(day).prepend("<h1 class='ui icon center aligned header'>" +
                                        "<i class='calendar icon'></i>" +
