Added link for ECE 314

--- a/home.html
+++ b/home.html
@@ -23,6 +23,9 @@
             <div class='two wide column'>
                 <button class='ui labeled icon button' onclick="window.location.href='Stock.html';"><i class='line chart icon'></i>Stocks</button>
             </div>
+            <div class='two wide column'>
+                <button class='ui labeled icon button' onclick="window.location.href='http://web.eece.maine.edu/~hummels/classes/ece314_web';"><i class='book icon'></i>ECE 314</button>
+            </div>
         </div>
     </body>
 </html>
