--- a/cal.html
+++ b/cal.html
@@ -159,15 +159,22 @@
                 if(sel == 1) {
                     var d = new Date();
                     var e = new Date();
+                    var t = new Date();
+
                     d = moment(d).format("YYYY-MM-DD");
                     e = moment(e).add('days', 5).format("YYYY-MM-DD");
+                    th = moment(t).format("HH");
+                    tm = moment(t).format("mm");
+                    t = (th + "%3A" + tm + "%3A00-04%3A00");
+                    t.toString();
+                    console.log(t);
 
                     var url = "https://www.googleapis.com/calendar/v3/calendars/chrissantosproduction%40gmail.com/events?" +
                                    //"maxResults=10&"+
                                    "orderBy=startTime&"+
                                    "singleEvents=true&"+
                                    "timeMax=" + e + "T00%3A00%3A00-04%3A00&"+
-                                   "timeMin=" + d + "T00%3A00%3A00-04%3A00&"+
+                                   "timeMin=" + d + "T" + t + "&"+
                                    "fields=items(colorId%2Cend%2Clocation%2Cstart%2Csummary)&"+
                                    "key=AIzaSyBsVUi9O3Js5biGFG746qYYWhY96wt9AaM";
                 }
